Add Java 17 build test to GitHub action